--- a/langchain/pyproject.toml
+++ b/langchain/pyproject.toml
@@ -11,6 +11,7 @@ packages = [{include = "langchain_docker"}]
 python = "^3.9"
 langchain = "^0.0.135"
 openai = "^0.27.4"
+networkx = "^3.1"
 
 
 [build-system]
