--- a/langchain/pyproject.toml
+++ b/langchain/pyproject.toml
@@ -12,6 +12,8 @@ python = "^3.9"
 langchain = "^0.0.135"
 openai = "^0.27.4"
 networkx = "^3.1"
+chromadb = "^0.3.21"
+tiktoken = "^0.3.3"
 
 
 [build-system]
