--- a/langchain/Dockerfile
+++ b/langchain/Dockerfile
@@ -12,4 +12,8 @@ RUN poetry install --no-root
 
 COPY . .
 
-## CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+EXPOSE 8000
+
+ENTRYPOINT ["poetry", "run"]
+
+CMD ["uvicorn", "src.main:app", "--host", "0.0.0.0", "--port", "8000", "--reload"]
