--- a/langchain/pyproject.toml
+++ b/langchain/pyproject.toml
@@ -14,6 +14,8 @@ openai = "^0.27.4"
 networkx = "^3.1"
 chromadb = "^0.3.21"
 tiktoken = "^0.3.3"
+uvicorn = "^0.21.1"
+fastapi = "^0.95.0"
 
 
 [build-system]
